add api update transfer product
