# internal/model/shop.go
@@ -121,11 +121,12 @@ func (d *TransferProductDetail) Scan(value interface{}) error {
 	return json.Unmarshal(bytes, d)
 }
 
-type RevertTransferProduct struct {
+type UpdateTransferProduct struct {
 	TransferProductID      int    `json:"transfer_product_id" gorm:"column:transfer_product_id"`
 	ShopProductID          int    `json:"shop_product_id" gorm:"column:shop_product_id"`
 	StockToTransfer        int    `json:"stock_to_transfer" gorm:"column:stock_to_transfer"`
 	WarehouseIDSource      int    `json:"warehouse_id_source" gorm:"column:warehouse_id_source"`
 	WarehouseIDDestination int    `json:"warehouse_id_destination" gorm:"column:warehouse_id_destination"`
+	Status                 string `json:"status"`
 	Note                   string `json:"note"`
 }
